--- a/index.html
+++ b/index.html
@@ -57,7 +57,40 @@
                 Thank you for visiting my page!!
             </h4>
         </div>
-<!--Footer-->
+        <!--Footer-->
+            <footer>
+                <div class="footer-item">
+                <a href="contact.html">
+                    <img class="footer-item__img" src="images/contact.png" alt="コンタクト" >
+                </a>
+                <p class="footer-item__title">Contact</p>
+                </div>
+                <div class="footer-item">
+                <a href="https://www.youtube.com/watch?v=re4JyfMyXJQ">
+                    <img class="footer-item__img" src="images/youtube.jpg" alt="youtube" >
+                </a>
+                <p class="footer-item__title">Youtube</p>
+                </div>
+                <div class="footer-item">
+                <a href="https://www.instagram.com/rkoabud/">
+                    <img class="footer-item__img" src="images/instagram.jpg" alt="instagram" >
+                </a>
+                <p class="footer-item__title">Instagram</p>
+                </div>
+                <div class="footer-item">
+                <a href="https://lance-digital-strategy.com/">
+                    <img class="footer-item__img" src="images/company.png" alt="company">
+                </a>
+                <p class="footer-item__title">Company HP</p>
+                </div>
+                <div class="footer-item">
+                <a href="https://www.f-sakura.ac.jp/">
+                    <img class="footer-item__img" src="images/school.JPG" alt="school" >
+                </a>
+                <p class="footer-item__title">School HP</p>
+                </div>
+        </footer>
+<!-- Footer
         <footer>
             <div>
                 <h1><a href="contact.html"><img class="contact" src="images/contact.png" alt="コンタクト" ></a></h1>
@@ -77,5 +110,5 @@
 
             </div>
 
-        </footer>   
+        </footer>    -->
     </body>
