--- a/index.html
+++ b/index.html
@@ -33,29 +33,32 @@
             </nav>
         </header>
 <!--Home-->
-        <div class="home-content wrapper">
-            <img src="images/main.jpg" alt="メイン画像" href="profile.html">
-            <h2>Hello,</h2>
-            <p>a bit about me：</p>
-        </div><!-- /.home-content -->
-        <div class="button1">
-            <a href="profile.html">My Profile</a>
-        </div>
-        <div class="button2">
-            <a href="career.html">My Career</a>
-        </div>
-        <div class="button3">
-            <a href="hobby.html">My Hobby</a>
-        </div>
+        <div class="info">
 
-        <div class="explanation">
-            <h4>Hi, My name is kohei Nakamura.
-                I have 3 jobs.<br>
-                First,I work in HR, general affairs, and legal affairs at the administration headquarters.<br>
-                Next , I'm an IT teacher at Sakuragaoka University.<br>
-                Last , I'm a Singer.I support artists who are not writing and composing.<br>
-                Thank you for visiting my page!!
-            </h4>
+            <div class="home-content wrapper">
+                <img src="images/main.jpg" alt="メイン画像" href="profile.html">
+                <h2>Hello,</h2>
+                <p>a bit about me：</p>
+            </div><!-- /.home-content -->
+            <div class="button1">
+                <a href="profile.html">My Profile</a>
+            </div>
+            <div class="button2">
+                <a href="career.html">My Career</a>
+            </div>
+            <div class="button3">
+                <a href="hobby.html">My Hobby</a>
+            </div>
+    
+            <div class="explanation">
+                <h4>Hi, My name is kohei Nakamura.
+                    I have 3 jobs.<br>
+                    First,I work in HR, general affairs, and legal affairs at the administration headquarters.<br>
+                    Next , I'm an IT teacher at Sakuragaoka University.<br>
+                    Last , I'm a Singer.I support artists who are not writing and composing.<br>
+                    Thank you for visiting my page!!
+                </h4>
+            </div>
         </div>
         <!--Footer-->
             <footer>
